[tool.poetry]
name = "ml_lifesicle"
version = "0.1.0"
description = ""
authors = ["Hirose Tomoki"]

[tool.poetry.dependencies]
python = "^3.8"
Hydra = "^2.5"
mlflow = "^1.22.0"
optuna = "^2.10.0"
scikit-learn = "^1.0.1"
hydra-core = "^1.1.1"
hydra-optuna-sweeper = "^1.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.920"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
